samples/_failures_safe/1761351925_d5f564_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3b39a9f.c: In function ‘main’:
./samples/SAFE/__tmp_b3b39a9f.c:146:9: error: expected expression at end of input
  146 |         destroy_matrix(&
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_b3b39a9f.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b3b39a9f.c:146:9: error: expected declaration or statement at end of input
